--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/qrcode": "^1.5.6",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -22,7 +24,10 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
     "nodemailer": "^7.0.6",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "qr-scanner": "^1.4.2",
+    "qrcode": "^1.5.4",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@prisma/client": "^6.15.0",
