--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
 # API Configuration
-# VITE_API_URL=http://localhost:3000
-VITE_API_URL=http://192.168.254.101:3000
+VITE_API_URL=http://localhost:3000
+# VITE_API_URL=http://192.168.254.101:3000
 
 # Environment
 NODE_ENV=development
